# tmt-plugin-diana

./: .gitignore  .packit.yaml  README.md  pyproject.toml  tmt-plugin-diana.spec
plans/: full.fmf  hardware.fmf  kickstart.fmf
tmt/steps/provision/: diana.py
